[metadata]
name = hw_tests
summary = Repository containing tests for hardware-dependant features in OpenStack
description-file = README.rst
classifier = 
	Programming Language :: Python :: 2
	Development Status :: 2 - Pre-Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
keywords = hardware intel pci passthrough
author = Intel Corporation
author-email = waldemar.znoinski@intel.com
project-url = https://github.com/wznoinsk/hw-tests

[entry_points]
tempest.test_plugins = 
	hw-tests = hw_tests.plugin:HardwareTestsPlugin

[wheel]
universal = 1

[pbr]
warnerrors = True

[easy_install]
index-url = http://pypi.python.org/simple/
allow-hosts = *.python.org

